--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         <activity android:name=".app.Signin">
 
         </activity>
+        <activity android:name=".app.CartActivity">
+
+        </activity>
     </application>
 
 </manifest>
