--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,9 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
+    repositories {
+        mavenCentral()
+    }
     defaultConfig {
         applicationId "com.sk.applytheme"
         minSdkVersion 23
@@ -29,5 +32,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:design:27.1.1'
+    implementation 'com.facebook.android:facebook-android-sdk:4.0.0'
 
 }
